hover fixed on mobile

--- a/src/scss/pages/portfolio.scss
+++ b/src/scss/pages/portfolio.scss
@@ -101,13 +101,18 @@
 
         &:hover {
             background: rgba($primary, 0.8);
-        }
+            @media (pointer:coarse) {
+                background: rgba($black1, 0.9);
+            }
+        } // hover
 
     } // portfolio-filter
 
     .portfolio-filter.mixitup-control-active {
         background: rgba($primary, 0.8);
     }
+
+
 
     // * End of categry label
 
